<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="favorites_sort">Display Favorites</string>
    <string name="top_rated_sort">Sort by Highest Rated</string>
    <string name="popular_sort">Sort by Most Popular</string>
    <string name="refresh_page">Refresh</string>

    <string name="page_load_confirm">Page has been successfully loaded.</string>


    <string name="error_message">There was an Error!</string>
    <string name="network_error_message">There was an issue retrieving information
        from the internet. Please check your internet connection and try again.</string>
    <string name="error_movie_retrieval_message">
            There was an issue retrieving the movie information</string>
    <string name="error_image_load">Whoops! There was an error loading your image!</string>
    <string name="error_parse_release_date">Error parsing date into formatted string</string>


    <string name="movie_poster_image_content">Movie Poster Image</string>
    <string name="movie_backdrop_content">Movie Backdrop Image</string>

    <string name="overview_label"><u>Overview/Synopsis</u>:</string>
    <string name="release_date_label">Released On: </string>
    <string name="vote_average_label">Vote Avg: </string>

    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove Favorite</string>
    <string name="add_favorites_confirm">Movie has been added to your list of favorites!</string>
    <string name="in_favorites_already_msg">Movie has been removed from your favorites!</string>
    <string name="clear_favorites_option">Reset Favorites List</string>
    <string name="deleted_favorites_message">Favorites Deleted!</string>
    <string name="null_favorites_error">Null Favorites List</string>
    <string name="empty_favorites_message">It looks like you have not added any favorite movies
    yet!\n\nSort by highest rated or most popular and click a movie, then press the
    Add to Favorites button to add a movie to your favorites list.</string>

    <string name="input_date_format_moviedb">yyyy-MM-dd</string>
    <string name="user_facing_pretty_date_format">MMMM dd, yyyy</string>

    <string name="play_trailer_button_text">PLAY</string>

    <string name="trailer_section_title_text">Trailers &amp; Videos (Press to Play)</string>
    <string name="review_section_title_text">User Reviews</string>

</resources>
