<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.moviesone.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">

        <menu>
            <item android:id="@+id/display_favorites"
                android:title="@string/favorites_sort"
                android:orderInCategory="1"
                app:showAsAction="never" />
            <item
                android:id="@+id/top_rated_sort_option"
                android:title="@string/top_rated_sort"
                android:orderInCategory="2"
                app:showAsAction="never" />
            <item
                android:id="@+id/popular_sort_option"
                android:title="@string/popular_sort"
                android:orderInCategory="3"
                app:showAsAction="never" />
            <item
                android:id="@+id/refresh_page_option"
                android:title="@string/refresh_page"
                android:orderInCategory="4"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>
