<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView android:id="@+id/master_scroll_view_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:paddingLeft="25dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <ImageView
                android:id="@+id/movie_poster_iv"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:contentDescription="@string/movie_poster_image_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_title_tv"
                app:layout_constraintRight_toLeftOf="@id/misc_movie_info_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/border_under_poster"/>

            <LinearLayout
                android:id="@+id/misc_movie_info_tv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/movie_title_tv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/movie_poster_iv">
                
                <TextView
                    android:id="@+id/movie_year_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/vote_average_label" />

                    <TextView
                        android:id="@+id/movie_rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:paddingLeft="4dp"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

                <Button
                    android:id="@+id/add_to_favorites_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="25dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="12sp"
                    android:text="@string/add_to_favorites"
                    android:textColor="@color/white"
                    android:background="@color/colorButton2" />

            </LinearLayout>

            <View
                android:id="@+id/border_under_poster"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_poster_iv"
                app:layout_constraintBottom_toTopOf="@id/movie_overview_tv" />


            <TextView
                android:id="@+id/movie_overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/border_under_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <ImageView
                android:id="@+id/backdrop_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_backdrop_content"
                android:alpha="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/border_under_poster" />

            <View
                android:id="@+id/border_under_overview"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/movie_overview_tv"
                app:layout_constraintBottom_toTopOf="@id/trailer_views" />


            <!-- TODO: implement the trailer functionality with an view with an adapter -->

            <TextView
                android:id="@+id/trailer_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingBottom="6dp"
                android:text="@string/trailer_section_title_text"
                app:layout_constraintTop_toBottomOf="@id/border_under_overview"
                app:layout_constraintBottom_toTopOf="@id/trailer_views"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/trailer_section_title"
                app:layout_constraintBottom_toTopOf="@id/review_views" />

            <View
                android:id="@+id/border_under_trailers"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/trailer_views"
                app:layout_constraintBottom_toTopOf="@id/review_views" />

            <TextView
                android:id="@+id/reviews_section_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/review_section_title_text"
                app:layout_constraintTop_toBottomOf="@id/border_under_trailers"
                app:layout_constraintBottom_toTopOf="@id/review_views" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REVIEWS TO GO HERE"
                app:layout_constraintTop_toBottomOf="@id/trailer_views"
                app:layout_constraintBottom_toBottomOf="parent" />





        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>